# trust-me-bro

./: .gitignore  README.md
backend/: pyproject.toml
backend/config/: settings.py
