[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "gabs-vieira",email = "thugsgabriel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0,<7.0)",
    "django-types (>=0.22.0,<0.23.0)",
    "django-stubs-ext (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "markdown (>=3.10,<4.0)",
    "django-filter (>=25.2,<26.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
